--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,6 @@ img {
   padding: 19px 0;
 }
 
-.header-block {
-  margin-bottom: 50px;
-}
-
 .visually-hidden {
   position: fixed;
   transform: scale(0);
@@ -168,9 +164,10 @@ img {
 .header__user {
   padding: 7px 14px;
   color: var(--color-secondary);
+  font-weight: 400;
   border: 1px solid var( --color-secondary);
   border-radius: 50px;
-  transition: color 0.3s ease-in-out,  border 0.3s ease-in-out;;
+  transition: color 0.3s ease-in-out,  border 0.3s ease-in-out, font-weight 0.3s ease-in-out;
 }
 
 .header__user:focus {
@@ -180,11 +177,13 @@ img {
 .header__user:hover {
   color: var(--color-black);
   border: 1px solid var(--color-black);
+  font-weight: 500;
 }
 
 .header__user:active {
   color: var(--color-black);
   border: 1px solid var(--color-black);
+  font-weight: 500;
 }
 
 .section {
@@ -298,8 +297,8 @@ img {
 .check__list::before {
   content: " ";
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 760px;
+  height: 32px;
   background-image: url(../img/head.jpg);
   background-repeat: no-repeat;
   position: absolute;
@@ -531,4 +530,8 @@ img {
   align-items: center;
   max-width: 360px;
   margin-left: 200px;
+}
+
+.check__img {
+  display: none;
 }
